--- a/src/app/new-profiles/new-profiles.component.html
+++ b/src/app/new-profiles/new-profiles.component.html
@@ -1,32 +1,26 @@
 <h2 mat-dialog-title>Add new profiler</h2>
 <mat-dialog-content class="mat-typography">
-
-    <mat-selection-list role="list" #shoes> 
-        <mat-list-option *ngFor="let profile of profiles" [value]="profile">
-            <!-- <img matListAvatar [src]="profile.img" > -->
-            <h3 matLine> {{profile.Name}} </h3>
-            <p matLine>
-                <span> {{profile.Email}} </span>
-                <!-- <span class="demo-2"> -- {{profile.AboutMe}} </span> -->
-            </p>
-            <p matLine>
-                <!-- <span> {{profile.Email}} </span> -->
-                <span class="demo-2">{{profile.AboutMe}} </span>
-            </p>
-            <!-- <div>
-                <button mat-button (click)="add(profile)">
-                    <mat-icon aria-hidden="false" aria-label="Example home icon">
-                        power_settings_new
-                    </mat-icon>
-                    Add
-                </button>
-            </div> -->
-
-        </mat-list-option>
-
-    </mat-selection-list>
+  <mat-horizontal-stepper linear="true" #stepper>
+    <mat-step label="choose the users">
+      <app-edit-org [org]="org"></app-edit-org>
+    </mat-step>
+    <mat-step label="Override password">
+      <ng-template matStepLabel>Step 2</ng-template>
+      <ng-template matStepContent>
+        <app-list-profiles [org]="org"></app-list-profiles>
+      </ng-template>
+    </mat-step>
+    <mat-step #final label="Final Review">
+      <app-final-review [org]="org"></app-final-review>
+    </mat-step>
+  </mat-horizontal-stepper>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Cancel</button>
-    <button mat-button [mat-dialog-close]="shoes.selectedOptions.selected" cdkFocusInitial>Install</button>
+  <button mat-button mat-dialog-close [mat-dialog-close]="null">Cancel</button>
+  <div *ngIf="stepper.selected != final">
+    <button mat-button (click)="stepper.next()">Next</button>
+  </div>
+  <!-- <button mat-button [mat-dialog-close]="shoes.selectedOptions.selected" cdkFocusInitial>
+    Install
+  </button> -->
 </mat-dialog-actions>
