--- a/src/app/new-profiles/final-review/final-review.component.html
+++ b/src/app/new-profiles/final-review/final-review.component.html
@@ -1,1 +1,14 @@
-{{org | json}}
+<p><strong>Name:</strong> {{org.name}}
+</p>
+
+
+<p><strong>Admin:</strong> {{org.admin}}
+</p>
+
+<strong>Profiles</strong>
+<mat-list role="list">
+  <mat-list-item *ngFor="let item of org.profiles" role="listitem">
+    <strong>{{item.name}}</strong>  - {{item.login}} - {{item.pwd}}
+  </mat-list-item>
+</mat-list>
+<!-- {{org | json}} -->
