--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,14 +4,14 @@
 </mat-form-field>
 
 <div class="table-outer mat-elevation-z8 scrollable" style="width: 100%" cdkScrollable>
-  <table #table mat-table [dataSource]="dataSource" multiTemplateDataRows class="full-width-table" matSort
+  <table #table mat-table [dataSource]="dataSource" multiTemplateDataRows class="full-width-table"
     [cdkDropListData]="dataSource" (cdkDropListDropped)="dropTable($event)" cdkDropList>
 
     <!-- Position Column -->
     <ng-container matColumnDef="position">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <mat-icon cdkDragHandle>reorder</mat-icon>
+        <mat-icon class="dragging" cdkDragHandle>reorder</mat-icon>
       </td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
@@ -99,8 +99,8 @@
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr mat-row *matRowDef="let element; columns: displayedColumns" class="example-element-row  cdkdrag-box"
-      [class.example-expanded-row]="expandedElement === element" cdkDrag></tr>
-    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+      cdkDrag [cdkDragData]=row></tr>
+    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row" ></tr>
     <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
   </table>
 
