--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,23 +6,9 @@ tr.example-detail-row {
   height: 0;
 }
 
-tr.example-element-row:not(.example-expanded-row):hover {
-  background: whitesmoke;
-}
-
-tr.example-element-row:not(.example-expanded-row):active {
-  background: #efefef;
-}
-
 .th-right{
   text-align: right;
 }
-
-// .line_icon {
-//   width: 36px;
-//   height: 36px;
-//   font-size: 36px;
-// }
 
 .mat-column-name {
   flex: 0 0 40% !important;
@@ -50,14 +36,23 @@ tr.example-element-row:not(.example-expanded-row):active {
 }
 
 /* Table header row */
-mat-header-row {
-  /*https://github.com/angular/material2/issues/5885*/
-  position: sticky;
-  top: -.5px;
-  background: white;
-  z-index: 100;
-}
+// mat-header-row {
+//   position: sticky;
+//   top: -.5px;
+//   background: white;
+//   z-index: 100;
+// }
 
 tr.mat-footer-row {
   font-weight: bold;
+}
+
+.example-element-detail {
+  overflow: hidden;
+  display: block;
+  width: auto;
+}
+
+.dragging {
+  cursor:grab;
 }
