--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -99,7 +99,7 @@
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr mat-row *matRowDef="let element; columns: displayedColumns" class="example-element-row  cdkdrag-box"
-      cdkDrag [cdkDragData]=row></tr>
+      cdkDrag [cdkDragData]=element></tr>
     <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row" ></tr>
     <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
   </table>
