--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/theming';
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
+
+// Define a theme.
+$primary: mat-palette($mat-indigo);
+$accent:  mat-palette($mat-blue, A400, A100, A400);
+
+$theme: mat-light-theme((
+  color: (
+    primary: $primary,
+    accent: $accent
+  )
+));
+
+// Include all theme styles for the components.
+@include angular-material-theme($theme);
 
 html, body {
   margin: 0;
