--- a/src/app/new-profiles/final-review/final-review.component.html
+++ b/src/app/new-profiles/final-review/final-review.component.html
@@ -12,3 +12,32 @@
   </mat-list-item>
 </mat-list>
 <!-- {{org | json}} -->
+
+<table #table mat-table [dataSource]="org.profiles" class="full-width-table">
+
+  <ng-container matColumnDef="name" class="mat-column-name">
+    <th mat-header-cell *matHeaderCellDef>Name</th>
+    <td mat-cell *matCellDef="let element">{{element.name}}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="pwd" class="mat-column-name">
+    <th mat-header-cell *matHeaderCellDef>Password</th>
+    <td mat-cell *matCellDef="let element">
+      <input type="text" [(ngModel)]="element.pwd">
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="login" class="mat-column-name">
+    <th mat-header-cell *matHeaderCellDef>LoginType</th>
+    <td mat-cell *matCellDef="let element">
+      <mat-select [(value)]="element.loginType">
+        <mat-option value="Standard">Standard</mat-option>
+        <mat-option  *ngFor="let topping of communities" [value]="topping.UrlPathPrefix">{{topping.Name}}</mat-option>
+      </mat-select>
+    </td>
+  </ng-container>
+
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+  <tr mat-row *matRowDef="let element; columns: displayedColumns" class="example-element-row"></tr>
+</table>
