--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
 
 // Define a theme.
-$primary: mat-palette($mat-indigo);
-$accent:  mat-palette($mat-blue, A400, A100, A400);
+$primary: mat.define-palette(mat.$indigo-palette);
+$accent:  mat.define-palette(mat.$blue-palette, A400, A100, A400);
 
-$theme: mat-light-theme((
+$theme: mat.define-light-theme((
   color: (
     primary: $primary,
     accent: $accent
@@ -14,7 +14,7 @@ $theme: mat-light-theme((
 ));
 
 // Include all theme styles for the components.
-@include angular-material-theme($theme);
+@include mat.all-component-themes($theme);
 
 html, body {
   margin: 0;
@@ -33,8 +33,8 @@ html, body {
   // justify-content: center;
 
   // background: url(./assets/background.jpg) no-repeat center fixed;
-  // -webkit-background-size: cover; /* pour anciens Chrome et Safari */
-  // background-size: cover; /* version standardisée */
+  // -webkit-background-size: cover; __<<ngThemingMigrationEscapedComment2>>__
+  // background-size: cover; __<<ngThemingMigrationEscapedComment3>>__
 
   .title {
     color: white;
