--- a/src/app/new-profiles/edit-org/edit-org.component.html
+++ b/src/app/new-profiles/edit-org/edit-org.component.html
@@ -6,7 +6,7 @@
     <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
   </mat-form-field>
 
-  <div formGroupName="main_user">
+  <div formGroupName="mainUser">
     <h4>Admin User</h4>
 
     <mat-form-field appearance="legacy">
