--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -58,7 +58,7 @@
             <span>Kill browser</span>
           </button>
           <mat-divider [inset]="false"></mat-divider>
-          <button mat-menu-item (click)="add_new_profile(element)">
+          <button mat-menu-item (click)="addNewProfiles(element)">
             <mat-icon color="primary">edit</mat-icon>
             <span>Edit org</span>
           </button>
@@ -74,7 +74,7 @@
     <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
     <ng-container matColumnDef="expandedDetail">
       <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-        <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+        <div class="example-element-detail" [@detailExpand]="element === expandedElement ? 'expanded' : 'collapsed'">
           <mat-list role="list" dense>
             <mat-list-item *ngFor="let profile of element.profiles; last as isLast">
               <mat-icon class="line_icon" matListAvatar aria-hidden="false" aria-label="Example home icon">person
@@ -91,9 +91,9 @@
                     power_settings_new
                   </mat-icon>
                 </button>
-                <button mat-icon-button [disabled]="element.admin == profile.innerName"
+                <button mat-icon-button [disabled]="element.admin === profile.innerName"
                   (click)="deleteProfile(element, profile);">
-                  <mat-icon [color]="element.admin == profile.innerName ? 'grey' : 'warn'">delete</mat-icon>
+                  <mat-icon [color]="element.admin === profile.innerName ? 'grey' : 'warn'">delete</mat-icon>
                 </button>
 
               <mat-divider *ngIf="!isLast"></mat-divider>
