Bunch of things

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,8 @@
 
 <!-- Main content -->
 <div class="content" role="main">
-  <app-home style="width: 100%;"></app-home>
+  <router-outlet style="width: 100%;"></router-outlet>
+  <!-- <app-home style="width: 100%;"></app-home> -->
 </div>
 
 <!-- Background -->
