--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -71,7 +71,7 @@ p {
   padding: 0 16px;
   max-width: 960px;
   flex-direction: column;
-  align-items: center;
+  // align-items: center;
 }
 
 svg.material-icons {
