Cleanning up old org setup Minor bug fixes

--- a/src/app/org-setup/profile-line/profile-line.component.html
+++ b/src/app/org-setup/profile-line/profile-line.component.html
@@ -26,7 +26,7 @@
 
     <mat-autocomplete #auto="matAutocomplete">
       <mat-option value="Standard">Standard</mat-option>
-      <mat-option *ngFor="let community of comms" [value]="c">
+      <mat-option *ngFor="let community of comms" [value]="community">
         {{community}}
       </mat-option>
     </mat-autocomplete>
