--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,12 @@
   z-index: 1000; /* Ensure that your app's content doesn't overlap the toolbar */
 }
 
+.logo-icon {
+  transform: scale(1.5);
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
 :host {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
@@ -27,10 +33,6 @@ h6 {
 
 p {
   margin: 0;
-}
-
-.spacer {
-  flex: 1;
 }
 
 .toolbar {
