--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
 .app-toolbar {
+  -webkit-app-region: drag;
   position: sticky;
   position: -webkit-sticky; /* For macOS/iOS Safari */
   top: 0; /* Sets the sticky toolbar to be on top */
@@ -7,8 +8,8 @@
 
 .logo-icon {
   transform: scale(1.5);
-  margin-right: 20px;
-  margin-left: 20px;
+  margin-right: 40px;
+  margin-left: 80px;
 }
 
 :host {
