--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -50,6 +50,15 @@
           <mat-icon>more_vert</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
+          <!-- <button mat-icon-button (click)="copyProfile(profile)" matTooltip='Copy credential to clipboard'>
+            <mat-icon>
+              content_copy
+            </mat-icon>
+          </button> -->
+          <button mat-menu-item (click)="kill(element)">
+            <mat-icon color="warn">share</mat-icon>
+            <span>Share</span>
+          </button>
           <button mat-menu-item (click)="kill(element)">
             <mat-icon color="warn">eject</mat-icon>
             <span>Kill browser</span>
@@ -77,15 +86,9 @@
               <mat-icon class="line_icon" matListAvatar aria-hidden="false" aria-label="Example home icon">person
               </mat-icon>
               <h2 matLine>{{ profile.name }}</h2>
-
-                <button mat-icon-button (click)="copyProfile(profile)" matTooltip='Copy credential to clipboard'>
-                  <mat-icon>
-                    content_copy
-                  </mat-icon>
-                </button>
                 <button mat-icon-button (click)="launchProfile(element, profile);">
                   <mat-icon>
-                    power_settings_new
+                    launch
                   </mat-icon>
                 </button>
 
