--- a/src/app/org-setup/profile-line/profile-line.component.html
+++ b/src/app/org-setup/profile-line/profile-line.component.html
@@ -14,7 +14,7 @@
     </mat-autocomplete>
   </mat-form-field>
 
-  <mat-form-field>
+  <mat-form-field style="width: 20%;">
     <mat-label>Password:</mat-label>
     <input matInput formControlName="pwd" placeholder="Password" />
   </mat-form-field>
