--- a/src/app/org-setup/profile-line/profile-line.component.html
+++ b/src/app/org-setup/profile-line/profile-line.component.html
@@ -26,8 +26,8 @@
 
     <mat-autocomplete #auto="matAutocomplete">
       <mat-option value="Standard">Standard</mat-option>
-      <mat-option *ngFor="let community of comms" [value]="community">
-        {{community}}
+      <mat-option *ngFor="let community of comms" [value]="community.url">
+        {{community.name}}
       </mat-option>
     </mat-autocomplete>
   </mat-form-field>
